--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start i",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider start i build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
