--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://JohnSolomou.github.io/admin",
+  "homepage": "http://JohnSolomou.github.io/login",
   "name": "admin-dashboard",
   "version": "0.1.0",
   "private": true,
