--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://JohnSolomou.github.io/admin",
+  "homepage": "http://JohnSolomou.github.io/admin/login",
   "name": "admin-dashboard",
   "version": "0.1.0",
   "private": true,
@@ -22,8 +22,8 @@
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start i",
     "build": "react-scripts build --openssl-legacy-provider build i ",
-    "predeploy": "npm run build  ",
-    "deploy": "gh-pages -d build  ",
+    "predeploy": "npm run build --openssl-legacy-provider build i ",
+    "deploy": "gh-pages -d build --openssl-legacy-provider build i ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
