--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      "defaults",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ],
     "development": [
       "last 1 chrome version",
